# snailscan

./: .gitignore  README.md  rpi-setup.md
camserver/: README.md  camserver.cabal
