name:                camserver
version:             0.1.0.0
description:         Raspberry Pi Camera Server (for SnailScan project)
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >= 1.22

executable camserver
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       
      base    >= 4.8 && < 4.9
    , servant >= 0.4 && < 0.5
